--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -14,10 +14,13 @@
 
 .general-stats {
   margin-top: 2%;
-  width:30%;
+  width: 25%;
+  margin-left: 1%;
 }
 
 .user-stats {
   margin-top: 2%;
-  width:70%;
+  width: 75%;
+  margin-left: 1%;
+  margin-right: 5%;
 }
