--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-axie d-flex justify-content-center">
   <div class="nav-show d-flex justify-content-between">
     <%= link_to "/", class: "navbar-brand" do %>
-      <%= image_tag "https://images.emojiterra.com/twitter/512px/1f4bb.png" %>
+      <%= image_tag "https://cryptologos.cc/logos/smooth-love-potion-slp-logo.png?v=020" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,13 +14,11 @@
           <li class="nav-item active">
             <%= link_to "World ranking", "#", class: "nav-link" %>
           </li>
-          <li class="nav-item active">
-            <%= link_to "Other users", "#", class: "nav-link" %>
-          </li>
           <li class="nav-item dropdown">
             <%= current_user.photo.nil? ? (image_tag "https://i.pinimg.com/originals/6b/73/f5/6b73f582d6ba44e65ddea1ed0a073bc6.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false) : (image_tag current_user.photo , class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false) %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My dashboard", "/users/#{current_user.id}", method: :get, class: "dropdown-item" %>
+              <%= link_to "Other users", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
