look and feel done, javascript next

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,79 @@
 <div class="user-show d-flex justify-content-between">
     <div class="general-stats">
-      <p>Hola!</p>
+      <div class="card-show-left" >
+        <div class="card-show-left-title d-flex justify-content-center">
+          <h4 class="mt-1 mb-1">Prices</h4>
+        </div>
+        <div class="card-show-left-content-first mt-3">
+          <a href="https://coinmarketcap.com/currencies/bitcoin/">
+            <div class="d-flex mb-1">
+              <span class="card-show-left-content-first-logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="Bitcoin logo"></span>
+              <span><strong>BTC</strong> price $<%= number_with_delimiter(@btc_usd.to_i, :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://coinmarketcap.com/currencies/ethereum/">
+            <div class="d-flex mb-1">
+            <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="Ethereum logo"></span>
+              <span><strong>ETH</strong> price $<%= number_with_delimiter(@eth_usd.to_i, :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://coinmarketcap.com/currencies/axie-infinity/">
+            <div class="d-flex mb-1">
+              <span class="card-show-left-content-first-logo"><img src="https://seeklogo.com/images/A/axie-infinity-axs-logo-57FE26A5DC-seeklogo.com.png" alt="Axs logo"></span>
+              <span><strong>AXS</strong> price $<%= number_with_delimiter(@axs_usd.to_i, :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://coinmarketcap.com/currencies/smooth-love-potion/">
+            <div class="d-flex mb-1">
+              <span class="card-show-left-content-first-logo"><img src="https://cryptologos.cc/logos/smooth-love-potion-slp-logo.png" alt="SLP logo"></span>
+              <span><strong>SLP</strong> price $<%= number_with_delimiter(@slp_usd.round(3), :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://coinmarketcap.com/currencies/ronin/">
+            <div class="d-flex">
+              <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/14101.png" alt="Ronin logo"></span>
+              <span><strong>RON</strong> price $<%= number_with_delimiter(@ron_usd.round(2), :delimiter => ',') %></span>
+            </div>
+          </a>
+        </div>
+
+      </div>
+      <div class="card-show-left">
+        <div class="card-show-left-title d-flex justify-content-center align-middle">
+          <h4 class="mt-1 mb-1">Axie in the News</h4>
+        </div>
+        <% until @article_count == 10 do %>
+          <div class="card-show-left-news mt-2 d-flex justify-content-center align-middle">
+            <a href="<%= @articles["results"][@article_count]["domain"] %>">
+              <div class="mb-2 news-content">
+                🔥 <strong class="underline"><%= @articles["results"][@article_count]["title"] %></strong>
+              </div>
+              <div class="news-content">
+                Source: <%= @articles["results"][@article_count]["domain"] %><br>
+                Date: <%= @articles["results"][@article_count]["published_at"].to_date %>
+              </div>
+            </a>
+            <% @article_count +=1 %>
+          </div>
+        <% end %>
+      </div>
     </div>
     <div class="user-stats">
       <div class="d-flex justify-content-between">
         <div class="card-summary">
-          <span class="underline"><%= @user.teams.exists? ? number_with_delimiter(@current_slp, :delimiter => ',') : "- " %></span>
+          <p class="underline number-size"><%= @user.teams.exists? ? number_with_delimiter(@current_slp, :delimiter => ',') : "- " %></p>
           <p>Claimable SLP's</p>
         </div>
         <div class="card-summary">
-          <span class="underline"><%= @user.teams.exists? ? ((@wins.to_f / @battles.to_f) * 100).to_i : "- " %>%</span>
+          <p class="underline number-size"><%= @user.teams.exists? ? ((@wins.to_f / @battles.to_f) * 100).to_i : "- " %>%</p>
           <p>Win Rate</p>
         </div>
         <div class="card-summary">
-          <span class="underline" ><%= @user.teams.exists? ? number_with_delimiter(@mmr.max, :delimiter => ',') : "- " %></span>
+          <p class="underline number-size"><%= @user.teams.exists? ? number_with_delimiter(@mmr.max, :delimiter => ',') : "- " %></p>
           <p>Highest MMR</p>
         </div>
         <div class="card-summary">
-          <span class="underline"><%= @user.teams.exists? ? number_with_delimiter(@mmr.min, :delimiter => ',') : "- " %></span>
+          <p class="underline number-size"><%= @user.teams.exists? ? number_with_delimiter(@mmr.min, :delimiter => ',') : "- " %></p>
           <p>Lowest MMR</p>
         </div>
       </div>
@@ -61,33 +117,37 @@
             </div>
           </div>
         </div>
-        <% @user.teams.each do |team| %>
-          <div class = "row">
-            <div class= "d-flex w-100">
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <strong><%= team.scholar_name.present? ? team.scholar_name : "" %></strong>
+        <ul class="scholars-breakdown" id="results">
+          <% @user.teams.each do |team| %>
+            <li >
+              <div class = "row">
+                <div class= "d-flex w-100">
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <strong><%= team.scholar_name.present? ? team.scholar_name : "" %></strong>
+                  </div>
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <%= team.win_rate.present? ? (team.win_rate * 100).to_i : "" %>%
+                  </div>
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <%= team.mmr.present? ? number_with_delimiter(team.mmr, :delimiter => ',') : "" %>
+                  </div>
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <%= team.rank.present? ? number_with_delimiter(team.rank, :delimiter => ',') : "" %>
+                  </div>
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <%= team.current_slp.present? ? number_with_delimiter(team.current_slp, :delimiter => ',') : "" %>
+                  </div>
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <%= team.total_slp.present? ? number_with_delimiter(team.total_slp, :delimiter => ',') : "" %>
+                  </div>
+                  <div class="table-input d-flex align-items-center justify-content-center m-0">
+                    <%= "In " %><%= team.next_claim.present? ? ((Time.at(team.next_claim) - Time.now)/60/60/24).to_i : "" %><%= ((Time.at(team.next_claim) - Time.now)/60/60/24).to_i == 1 ? " day" : " days" %>
+                  </div>
+                </div>
               </div>
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <%= team.win_rate.present? ? (team.win_rate * 100).to_i : "" %>%
-              </div>
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <%= team.mmr.present? ? number_with_delimiter(team.mmr, :delimiter => ',') : "" %>
-              </div>
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <%= team.rank.present? ? number_with_delimiter(team.rank, :delimiter => ',') : "" %>
-              </div>
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <%= team.current_slp.present? ? number_with_delimiter(team.current_slp, :delimiter => ',') : "" %>
-              </div>
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <%= team.total_slp.present? ? number_with_delimiter(team.total_slp, :delimiter => ',') : "" %>
-              </div>
-              <div class="table-input d-flex align-items-center justify-content-center m-0">
-                <%= "In " %><%= team.next_claim.present? ? ((Time.at(team.next_claim) - Time.now)/60/60/24).to_i : "" %><%= ((Time.at(team.next_claim) - Time.now)/60/60/24).to_i == 1 ? " day" : " days" %>
-              </div>
-            </div>
-          </div>
-        <% end %>
+            </li>
+          <% end %>
+        </ul>
       </div>
     </div>
 
