--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,6 +3,73 @@
   text-align: center;
 }
 
+.number-size {
+  font-size: 70px;
+}
+
 .card-summary span {
   font-size: xx-large;
+}
+
+.card-show-left {
+  width: 95%;
+  background-color: transparent;
+  border-radius: 6px;
+  color: rgb(99, 97, 97);
+  margin-bottom: 2%;
+}
+
+
+.card-show-left-title{
+  background-color: #21B6A8;
+  border-radius: 50px;
+  color: white;
+  height: 20%;
+  width: 100%;
+}
+
+.card-show-left-content {
+  padding-left: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.card-show-left-content-first {
+  padding-left: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-bottom: 5%;
+}
+
+.card-show-left-content-first a {
+  color: rgb(99, 97, 97);
+  text-decoration: none;
+}
+
+.card-show-left-content-first-logo img {
+  width: 20px;
+  height: 20px;
+}
+
+.card-show-left-content-first span {
+  margin-left: 2%;
+}
+
+.card-show-left-news {
+  width: 100%;
+  background-color: transparent;
+  border-radius: 6px;
+  color: rgb(99, 97, 97);
+  margin-bottom: 2%;
+  border: solid;
+  border-width: 2px;
+  border-color: #21B6A8;
+  a {
+    color: rgb(99, 97, 97);
+    text-decoration: none;
+  }
+}
+
+.news-content {
+  padding: 5px;
 }
