--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -15,7 +15,7 @@
 .general-stats {
   margin-top: 2%;
   width: 25%;
-  margin-left: 1%;
+  margin-left: 0.5%;
 }
 
 .user-stats {
@@ -23,4 +23,10 @@
   width: 75%;
   margin-left: 1%;
   margin-right: 5%;
+}
+
+.scholars-breakdown {
+  li {
+    list-style: none;
+  }
 }
