--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,7 +4,7 @@
 }
 
 .number-size {
-  font-size: 70px;
+  font-size: 50px;
 }
 
 .card-summary span {
@@ -57,7 +57,7 @@
 
 .card-show-left-news {
   width: 100%;
-  background-color: transparent;
+  background-color: rgba(254, 255, 254, 0.611);
   border-radius: 6px;
   color: rgb(99, 97, 97);
   margin-bottom: 2%;
