--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,31 +5,31 @@
           <h4 class="mt-1 mb-1">Prices</h4>
         </div>
         <div class="card-show-left-content-first mt-3">
-          <a href="https://coinmarketcap.com/currencies/bitcoin/">
+          <a href="https://www.coingecko.com/en/coins/bitcoin">
             <div class="d-flex mb-1">
               <span class="card-show-left-content-first-logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="Bitcoin logo"></span>
               <span><strong>BTC</strong> price $<%= number_with_delimiter(@btc_usd.to_i, :delimiter => ',') %></span><br>
             </div>
           </a>
-          <a href="https://coinmarketcap.com/currencies/ethereum/">
+          <a href="https://www.coingecko.com/en/coins/ethereum">
             <div class="d-flex mb-1">
             <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="Ethereum logo"></span>
               <span><strong>ETH</strong> price $<%= number_with_delimiter(@eth_usd.to_i, :delimiter => ',') %></span><br>
             </div>
           </a>
-          <a href="https://coinmarketcap.com/currencies/axie-infinity/">
+          <a href="https://www.coingecko.com/en/coins/axie-infinity">
             <div class="d-flex mb-1">
               <span class="card-show-left-content-first-logo"><img src="https://seeklogo.com/images/A/axie-infinity-axs-logo-57FE26A5DC-seeklogo.com.png" alt="Axs logo"></span>
               <span><strong>AXS</strong> price $<%= number_with_delimiter(@axs_usd.to_i, :delimiter => ',') %></span><br>
             </div>
           </a>
-          <a href="https://coinmarketcap.com/currencies/smooth-love-potion/">
+          <a href="https://www.coingecko.com/en/coins/smooth-love-potion">
             <div class="d-flex mb-1">
               <span class="card-show-left-content-first-logo"><img src="https://cryptologos.cc/logos/smooth-love-potion-slp-logo.png" alt="SLP logo"></span>
               <span><strong>SLP</strong> price $<%= number_with_delimiter(@slp_usd.round(3), :delimiter => ',') %></span><br>
             </div>
           </a>
-          <a href="https://coinmarketcap.com/currencies/ronin/">
+          <a href="https://www.coingecko.com/en/coins/ronin">
             <div class="d-flex">
               <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/14101.png" alt="Ronin logo"></span>
               <span><strong>RON</strong> price $<%= number_with_delimiter(@ron_usd.round(2), :delimiter => ',') %></span>
@@ -44,7 +44,7 @@
         </div>
         <% until @article_count == 10 do %>
           <div class="card-show-left-news mt-2 d-flex justify-content-center align-middle">
-            <a href="<%= @articles["results"][@article_count]["domain"] %>">
+            <a href="<%= @articles["results"][@article_count]["url"] %>" target="_blank">
               <div class="mb-2 news-content">
                 🔥 <strong class="underline"><%= @articles["results"][@article_count]["title"] %></strong>
               </div>
@@ -59,6 +59,7 @@
       </div>
     </div>
     <div class="user-stats">
+
       <div class="d-flex justify-content-between">
         <div class="card-summary">
           <p class="underline number-size"><%= @user.teams.exists? ? number_with_delimiter(@current_slp, :delimiter => ',') : "- " %></p>
@@ -77,21 +78,8 @@
           <p>Lowest MMR</p>
         </div>
       </div>
-      <div class="mt-5">
-      <% if (current_user.present?) && (current_user.id == params[:id].to_i) %>
-        <%= simple_form_for @team, url: "/ronin_address", :method => :patch, html: { class: "d-flex justify-content-center mt-2"}, defaults: { wrapper: false } do |f| %>
-          <div class="">
-            <div class="d-flex form-input h-100">
-              <%= f.input :scholar_name, label: false, input_html: { class: "visible-input"}, placeholder: 'Scholar name' %>
-              <%= f.input :ronin_address, label: false, input_html: { class: "visible-input"}, placeholder: 'Ronin address' %>
-              <%= f.input :user_id, :as => :hidden, :input_html => { :value => @user.id } %>
-            </div>
-          </div>
-          <%= f.submit "Track address", class: "btn-submit" %>
-        <% end %>
-      <% end %>
-      </div>
-      <div class="mt-5">
+
+      <div class="mt-4 table-of-contents">
         <div class = "row-headers">
           <div class= "d-flex w-100">
             <div class="table-input-2 d-flex align-items-center justify-content-center m-0">
@@ -117,38 +105,28 @@
             </div>
           </div>
         </div>
-        <ul class="scholars-breakdown" id="results">
+        <div class="scholars-breakdown " id="results">
           <% @user.teams.each do |team| %>
-            <li >
-              <div class = "row">
-                <div class= "d-flex w-100">
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <strong><%= team.scholar_name.present? ? team.scholar_name : "" %></strong>
-                  </div>
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <%= team.win_rate.present? ? (team.win_rate * 100).to_i : "" %>%
-                  </div>
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <%= team.mmr.present? ? number_with_delimiter(team.mmr, :delimiter => ',') : "" %>
-                  </div>
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <%= team.rank.present? ? number_with_delimiter(team.rank, :delimiter => ',') : "" %>
-                  </div>
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <%= team.current_slp.present? ? number_with_delimiter(team.current_slp, :delimiter => ',') : "" %>
-                  </div>
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <%= team.total_slp.present? ? number_with_delimiter(team.total_slp, :delimiter => ',') : "" %>
-                  </div>
-                  <div class="table-input d-flex align-items-center justify-content-center m-0">
-                    <%= "In " %><%= team.next_claim.present? ? ((Time.at(team.next_claim) - Time.now)/60/60/24).to_i : "" %><%= ((Time.at(team.next_claim) - Time.now)/60/60/24).to_i == 1 ? " day" : " days" %>
-                  </div>
-                </div>
-              </div>
-            </li>
+            <%= render 'list_teams', team: team %>
           <% end %>
-        </ul>
+        </div>
       </div>
+
+      <div class="mt-5">
+        <% if (current_user.present?) && (current_user.id == params[:id].to_i) %>
+          <%= simple_form_for @team, url: "/ronin_address", :method => :post, html: { class: "d-flex justify-content-center mt-2"}, defaults: { wrapper: false }, remote: true do |f| %>
+            <div class="">
+              <div class="d-flex form-input h-100">
+                <%= f.input :scholar_name, label: false, input_html: { class: "visible-input"}, placeholder: 'Scholar name' %>
+                <%= f.input :ronin_address, label: false, input_html: { class: "visible-input"}, placeholder: 'Ronin address' %>
+                <%= f.input :user_id, :as => :hidden, :input_html => { :value => @user.id } %>
+              </div>
+            </div>
+            <%= f.submit "Track address", class: "btn-submit" %>
+          <% end %>
+        <% end %>
+      </div>
+
     </div>
 
 
